# 100knocks-preprocess

./: .dockleignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .sqlfluff  .textlintrc  Dockerfile.notebook  Dockerfile.postgres  Entity_Relationship_original.ipynb  LICENSE  Pipfile  README.md  README.rst  docker-compose.yml  environment.yml  install.R  package.json  preprocess_knock_Python_Azure.ipynb  preprocess_knock_Python_Colab.ipynb  preprocess_knock_Python_colab.ipynb  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/linters/: .hadolint.yaml
.github/workflows/: docker_build.yml  dockle.yml  fix_env.yml  format.yml  jupyter_notebook_check.yml  publish_image.yml  run_notebooks.yml  super-linter.yml  textlint.yml  update_packages.yml  update_pre_commit_config.yml
answer/: ans_preprocess_knock_Python_Azure.ipynb  ans_preprocess_knock_Python_Colab.ipynb
data/: P_df_product_full_CP932_header.csv  P_df_product_full_UTF-8_header.csv  P_df_product_full_UTF-8_header.tsv  P_df_product_full_UTF-8_noh.csv
doc/: preprocess_knock_R.html  preprocess_knock_SQL.html
doc/answer/: ans_preprocess_knock_SQL.html
docker/.jupyter/: jupyter_lab_config.py  jupyter_notebook_config.py
docker/doc/: ans_preprocess_knock_Python.html  ans_preprocess_knock_R.html  ans_preprocess_knock_SQL.html  preprocess_knock_Python.html  preprocess_knock_R.html  (+1 more)
work/: Entity_Relationship.ipynb  preprocess_knock_Python.ipynb  preprocess_knock_R.ipynb  preprocess_knock_SQL.ipynb  preprocess_knock_polars.ipynb
work/data/: product.csv  (+3 more)
(+21 files in other folders)
