[tool.poetry]
name = "100knocks-preprocess-polars"
version = "0.1.0"
description = ""
authors = ["Yuto Suzuki <yuto.suzuki.0403@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.2.2"
polars = "^0.20.31"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"
numpy = "^2.0.0"
imblearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
